--- a/.lagoon.yml
+++ b/.lagoon.yml
@@ -34,6 +34,6 @@ environments:
     routes:
         - varnish:
             - "drupal-example.amazee.io"
-  training-galera:
+  galera:
     types:
       mariadb: mariadb-galera
